Add toc and nodate support. Add toc to front matter to display toc Add nodate to front matter to hide date

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -5,7 +5,9 @@
   </header>
 
   <div class="article-meta">
-    <%- partial('post/date', {class_name: 'article-date', date_format: null}) %>
+    <% if (!post.nodate) { %>
+      <%- partial('post/date', {class_name: 'article-date', date_format: null}) %>
+    <% } %>
     <% if (post.author){ %><div class="article-author"><%= post.author %></div><% } %>
     <%- partial('post/category') %>
   </div>
@@ -20,6 +22,12 @@
           </p>
         <% } %>
       <% } else { %>
+        <% if (!index && post.toc) { %>
+            <div id="toc" class="toc-article">
+            <strong class="toc-title"><%= __('Table of Content') %></strong>
+                <%- toc(post.content, {list_number: false}) %>
+            </div>
+        <% } %>
         <%- post.content %>
       <% } %>
     </div>
