Hide blog title

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,5 +1,7 @@
 <div class="blog-header">
+  <% if (false) { %>
   <h1 class="blog-title"><%= config.title %></h1>
+  <% } %>
   <% if (theme.subtitle){ %>
     <p class="lead blog-description"><%= theme.subtitle %></p>
   <% } %>
